--- a/toDoApp/todo/static/todo/css/style.css
+++ b/toDoApp/todo/static/todo/css/style.css
@@ -2,9 +2,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    }
-    
-    body {
+}
+
+body {
     font-family: 'Open Sans', sans-serif;
     font-family: Arial, sans-serif;
     background-image: url('../images/background.jpg');
@@ -18,9 +18,9 @@
     height: 100vh;
     margin: 0;
     backdrop-filter: blur(5px);
-    }
-    
-    .app-container {
+}
+
+.app-container {
     max-width: 60%;
     width: 40%;
     position: absolute;
@@ -28,27 +28,27 @@
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0 auto;
-    background-color: #fff;
+    background-color: #ffffff;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-    
-    .input-container {
+}
+
+.input-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    }
-    
-    h1 {
+}
+
+h1 {
     text-align: center;
     font-weight: 700;
     font-size: 36px;
     margin-bottom: 20px;
     color: #0077FF;
-    }
-    
-    input[type="text"] {
+}
+
+input[type="text"] {
     display: inline-block;
     width: 50%;
     padding: 10px;
@@ -58,13 +58,13 @@
     color: #666;
     font-size: 16px;
     font-weight: 400;
-    }
-    
-    input[type="text"]:focus {
+}
+
+input[type="text"]:focus {
     outline: none;
-    }
-    
-    button[type="submit"] {
+}
+
+button[type="submit"] {
     display: inline-block;
     width: 40%;
     padding: 10px;
@@ -75,17 +75,17 @@
     font-size: 16px;
     font-weight: 700;
     cursor: pointer;
-    }
-    
-    #addBtn {
+}
+
+#addBtn {
     width: 20%;
-    }
-    
-    ul {
+}
+
+ul {
     margin-top: 30px;
-    }
-    
-    li {
+}
+
+li {
     padding: 20px 10px;
     border-bottom: 1px solid #eee;
     font-size: 18px;
@@ -94,13 +94,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    }
-    
-    li:last-child {
+}
+
+li:last-child {
     border-bottom: none;
-    }
-    
-    li .remove-btn {
+}
+
+li .remove-btn {
     color: #FF6B6B;
     font-weight: 700;
     font-size: 18px;
@@ -108,73 +108,105 @@
     border: none;
     cursor: pointer;
     transition: color 0.2s ease-in-out;
-    }
-    
-    li .remove-btn:hover {
+}
+
+li .remove-btn:hover {
     color: #EF4444;
-    }
-    
-    li.checked {
+}
+
+li.checked {
     text-decoration: line-through;
     color: #999;
-    }
-    
-    /* styles.css */
-    .container {
+}
+
+/* styles.css */
+.container {
     text-align: center;
-    }
-    
-    li {
+}
+
+li {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
     padding: 10px;
     margin: 5px;
-    }
-    
-    /* styles.css */
-    .container {
+}
+
+/* styles.css */
+.container {
     text-align: center;
-    }
-    
-    .task-list {
+}
+
+.task-list {
     list-style-type: none;
     display: flex;
     flex-direction: column;
     align-items: start;
     padding: 0;
-    }
-    
-    .task-text {
+}
+
+.task-text {
     margin-left: 10px;
-    }
-    
-    .task-list h4 {
+}
+
+.task-list h4 {
     margin-top: 20px;
-    }
-    
-    .task-list li {
+}
+
+.task-list li {
     padding: 10px;
     margin: 5px;
-    }
-    
-    .checked {
+}
+
+.checked {
     text-decoration: line-through;
-    }
-    
-    #priority {
+}
+
+#priority {
     width: auto;
-    }
-    
-    #task-list-1 h4 {
+}
+
+#task-list-1 h4 {
     color: #ffa5b4;
-    }
-    
-    #task-list-2 h4 {
+}
+
+#task-list-2 h4 {
     color: #e0d283;
-    }
-    
-    #task-list-3 h4 {
+}
+
+#task-list-3 h4 {
     color: #82d4df;
-    }
+}
+
+.popup{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.popup-content{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    width: 70%;
+    height: 70%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.popup-content h2{
+    margin-bottom: 20px;
+}
