--- a/toDoApp/todo/templates/todo/pages/index.html
+++ b/toDoApp/todo/templates/todo/pages/index.html
@@ -1,6 +1,7 @@
 {% extends 'todo/pages/layout.html' %}
 {% block content %}
-<h1>What will you do today?</h1>
+<a href="{% url 'todo:logout' %}">Logout</a>
+<h1>What will you do today {{ user }}?</h1>
 <div class="input-container">
     <form method="POST" action="{% url 'todo:add_task' %}">
         {% csrf_token %}
@@ -8,18 +9,18 @@
         <button id="addTask" class="btn btn-primary">Add</button>
     </form>
 </div>
-<div id="list-container" class="nt-4">
+<div id="lists-container" class="nt-4">
     <ul id="task-list-1" class="task-list list-group">
         <h4>Priority 1</h4>
         {% if tasks %}
             {% for task in tasks %}
                 {% if task.priority == 1 %}
-                    <li id={{task.name}} class='list-group-item'>
-                        <input class="form-check-input" type="checkbox">
-                        <span class="task-text">
-                            <a href="{% url 'todo:task' task.id %}">{{task.name}}</a>
-                        </span>
-                    </li>
+                <li id={{task.name}} class='list-group-item'>
+                    <input class="form-check-input" type="checkbox" id="{{task.id}}">
+                    <span class="task-text">
+                        <a href="{% url 'todo:task' task.id %}">{{task.name}}</a>
+                    </span>
+                </li>
                 {% endif %}
             {% endfor %}
         {% else %}
@@ -31,12 +32,12 @@
         {% if tasks %}
             {% for task in tasks %}
                 {% if task.priority == 2 %}
-                    <li id={{task.name}} class='list-group-item'>
-                        <input class="form-check-input" type="checkbox">
-                        <span class="task-text">
-                            <a href="{% url 'todo:task' task.id %}">{{task.name}}</a>
-                        </span>
-                    </li>
+                <li id={{task.name}} class='list-group-item'>
+                    <input class="form-check-input" type="checkbox" id="{{task.id}}">
+                    <span class="task-text">
+                        <a href="{% url 'todo:task' task.id %}">{{task.name}}</a>
+                    </span>
+                </li>
                 {% endif %}
             {% endfor %}
         {% else %}
@@ -49,7 +50,7 @@
             {% for task in tasks %}
                 {% if task.priority == 3 %}
                     <li id={{task.name}} class='list-group-item'>
-                        <input class="form-check-input" type="checkbox">
+                        <input class="form-check-input" type="checkbox" id="{{task.id}}">
                         <span class="task-text">
                             <a href="{% url 'todo:task' task.id %}">{{task.name}}</a>
                         </span>
